--- a/manage_pinecone_index.ipynb
+++ b/manage_pinecone_index.ipynb
@@ -356,7 +356,7 @@
         "        split_docs = text_splitter.split_documents(documents)\n",
         "        return split_docs\n",
         "\n",
-        "    def _load_notiondb(self, id):\n",
+        "    def load_notiondb(self, id):\n",
         "        print(\"try CustomNotionDBLoader\")\n",
         "        loader = CustomNotionDBLoader(\n",
         "            integration_token=os.environ[\"NOTION_TOKEN\"],\n",
@@ -373,7 +373,7 @@
         "            {\"type\": doc_type, \"value\": doc_value}\n",
         "        )\n",
         "\n",
-        "    def _load_documents(self):\n",
+        "    def load_documents(self):\n",
         "        # entry website\n",
         "        urls = list(self.urls)\n",
         "        if urls:\n",
@@ -406,9 +406,9 @@
         "\n",
         "                self._entry_documents(file_type, file_path)\n",
         "\n",
-        "    def from_documents(self, namespace=None):\n",
-        "        self._load_documents()\n",
+        "        return self.docs\n",
         "\n",
+        "    def from_documents(self, namespace=None):\n",
         "        documents = []\n",
         "        source_list = []\n",
         "        for doc in self.docs:\n",
@@ -502,7 +502,7 @@
         "id": "PcKn-xiK1sMM",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -524,6 +524,30 @@
         "\n",
         "def upsert_from_documents(load_dir, urls, specify_loader):\n",
         "    manage_index = ManageIndex(load_dir=load_dir, urls=urls, specify_loader=specify_loader)\n",
+        "\n",
+        "    # 資料の重複処理\n",
+        "    docs = manage_index.load_documents()\n",
+        "    source_list = [doc[\"value\"].replace(load_dir+\"/\", \"\") for doc in docs]\n",
+        "    duplicate_sorces_list = []\n",
+        "    for item in current_ids_dict.values():\n",
+        "        if item[\"source\"] in source_list:\n",
+        "            duplicate_sorces_list.append(item[\"source\"])\n",
+        "    if duplicate_sorces_list:\n",
+        "        print(f\"同じ名前の資料が見つかりました。\\n{duplicate_sorces_list}\\n\")\n",
+        "        user_input = input(\"上書きする場合は'overwrite'、登録から除外する場合は'exclude'、そのまま登録する場合は'entry'を入力してください。:\")\n",
+        "        if user_input == \"overwrite\":\n",
+        "            print(f\"同じ名前の資料を上書きします。\\n{duplicate_sorces_list}\")\n",
+        "            delete_items(delete_sources_list=duplicate_sorces_list)\n",
+        "        elif user_input == \"exclude\":\n",
+        "            print(f\"同じ名前の資料を登録から除外します。\\n{duplicate_sorces_list}\")\n",
+        "            manage_index.docs = [doc for doc in manage_index.docs if doc[\"value\"].replace(load_dir+\"/\", \"\") not in duplicate_sorces_list]\n",
+        "            print(manage_index.docs)\n",
+        "        elif user_input == \"entry\":\n",
+        "            print(f\"同じ名前の資料を重複させて登録します。\\n{duplicate_sorces_list}\")\n",
+        "        else:\n",
+        "            print(f\"入力が不正です。{user_input}\")\n",
+        "            return\n",
+        "\n",
         "    upsert_ids_dict = manage_index.from_documents(namespace)\n",
         "    if isinstance(upsert_ids_dict, str):\n",
         "        print(upsert_ids_dict)\n",
@@ -556,7 +580,7 @@
         "id": "AjrSjD6Gc805",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -607,7 +631,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title データ追加 { vertical-output: true }\n",
+        "#@title データ追加\n",
         "\n",
         "specify_loader = []\n",
         "# specify_loader = [\"PDFMinerLoader\"] # 文字化けする場合はこの行のコメントアウトを外して実行\n",
@@ -645,9 +669,7 @@
         "\n",
         "]\n",
         "delete_sources_list=[\n",
-        "    \"ガイドライン/あいうえお/全国リーダー会議_ガイドライン_20200901.docx\",\n",
-        "    \"ガイドライン/230301_minutes.pdf\",\n",
-        "    \"ガイドライン/あいうえお/20211001_反社会的勢力対応ガイドライン.docx\"\n",
+        "\n",
         "]\n",
         "delete_items(delete_ids_list=delete_ids_list, delete_sources_list=delete_sources_list)\n",
         "\n",
