metadataを設定できるようにした。バックアップとの整合性をとれるようにした

--- a/manage_pinecone_index.ipynb
+++ b/manage_pinecone_index.ipynb
@@ -171,6 +171,9 @@
         "# 名前空間（インデックスの分類）を設定\n",
         "namespace = \"\" # デフォルトは空\n",
         "\n",
+        "# カスタムメタデータを設定\n",
+        "additional_metadata = {} # デフォルトは空\n",
+        "\n",
         "try:\n",
         "    with open(f\"{ids_path}/ids_dict_{namespace}.json\", \"r\") as f:\n",
         "        current_ids_dict = json.load(f)\n",
@@ -278,6 +281,9 @@
         "    CSVLoader,\n",
         "    UnstructuredFileLoader,\n",
         "    Docx2txtLoader,\n",
+        "    UnstructuredExcelLoader,\n",
+        "    UnstructuredPowerPointLoader,\n",
+        "\n",
         ")\n",
         "\n",
         "from langchain.text_splitter import (\n",
@@ -293,6 +299,9 @@
         "    '.pdf': 'pdf',\n",
         "    '.md': 'markdown',\n",
         "    '.docx': 'word',\n",
+        "    'xlsx': 'excel',\n",
+        "    'pptx': 'power_point',\n",
+        "\n",
         "}\n",
         "special_dirs_dict = {\n",
         "    \"NotionDB\": \"notion\",\n",
@@ -356,6 +365,23 @@
         "        split_docs = text_splitter.split_documents(documents)\n",
         "        return split_docs\n",
         "\n",
+        "    def _load_excel(self, path):\n",
+        "        print(\"try UnstructuredExcelLoader\")\n",
+        "        loader = UnstructuredExcelLoader(path)\n",
+        "        documents = loader.load()\n",
+        "        text_splitter = CharacterTextSplitter(separator=\"\\n\", chunk_size=1000, chunk_overlap=0)\n",
+        "        split_docs = text_splitter.split_documents(documents)\n",
+        "        return split_docs\n",
+        "\n",
+        "    def _load_power_point(self, path):\n",
+        "        print(\"try UnstructuredPowerPointLoader\")\n",
+        "        loader = UnstructuredPowerPointLoader(path)\n",
+        "        documents = loader.load()\n",
+        "        text_splitter = CharacterTextSplitter(separator=\"\\n\", chunk_size=1000, chunk_overlap=0)\n",
+        "        split_docs = text_splitter.split_documents(documents)\n",
+        "        return split_docs\n",
+        "\n",
+        "\n",
         "    def load_notiondb(self, id):\n",
         "        print(\"try CustomNotionDBLoader\")\n",
         "        loader = CustomNotionDBLoader(\n",
@@ -408,7 +434,7 @@
         "\n",
         "        return self.docs\n",
         "\n",
-        "    def from_documents(self, namespace=None):\n",
+        "    def from_documents(self, namespace=None, additional_metadata={}):\n",
         "        documents = []\n",
         "        source_list = []\n",
         "        for doc in self.docs:\n",
@@ -426,6 +452,10 @@
         "                    document = self._load_text(doc[\"value\"])\n",
         "                elif doc[\"type\"] == \"word\":\n",
         "                    document = self._load_word(doc[\"value\"])\n",
+        "                elif doc[\"type\"] == \"excel\":\n",
+        "                    document = self._load_excel(doc[\"value\"])\n",
+        "                elif doc[\"type\"] == \"power_point\":\n",
+        "                    document = self._load_power_point(doc[\"value\"])\n",
         "                elif doc[\"type\"] == \"notion\":\n",
         "                    document = self._load_notiondb(doc[\"value\"])\n",
         "\n",
@@ -440,6 +470,8 @@
         "        if documents:\n",
         "            # fix metadata\n",
         "            for document in documents:\n",
+        "                document.metadata.update(**additional_metadata)\n",
+        "\n",
         "                source = document.metadata.get(\"source\")\n",
         "                if source:\n",
         "                    document.metadata[\"source\"] = source.replace(self.load_dir+\"/\", \"\")\n",
@@ -548,7 +580,7 @@
         "            print(f\"入力が不正です。{user_input}\")\n",
         "            return\n",
         "\n",
-        "    upsert_ids_dict = manage_index.from_documents(namespace)\n",
+        "    upsert_ids_dict = manage_index.from_documents(namespace, additional_metadata)\n",
         "    if isinstance(upsert_ids_dict, str):\n",
         "        print(upsert_ids_dict)\n",
         "        return\n",
@@ -686,6 +718,36 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Pineconeとids_dictの整合性をとる（Pineconeに合わせる）\n",
+        "index = pinecone.Index(os.environ[\"INDEX_NAME\"])\n",
+        "result = index.query(\n",
+        "    vector=[i for i in range(1536)],\n",
+        "    top_k=10000,\n",
+        "    include_values=False,\n",
+        "    include_metadata=True,\n",
+        "    namespace=namespace\n",
+        ")\n",
+        "\n",
+        "# 新しい辞書を作成\n",
+        "new_dict = {}\n",
+        "for item in result[\"matches\"]:\n",
+        "    try:\n",
+        "        new_dict[item[\"id\"]] = item[\"metadata\"]\n",
+        "    except AttributeError:\n",
+        "        new_dict[item[\"id\"]] = {}\n",
+        "\n",
+        "update_ids_json(upsert_ids_dict=new_dict)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "jy94rZui-91l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title Pinecone上の全アイテム削除 { vertical-output: true }\n",
         "# index = pinecone.Index(os.environ[\"INDEX_NAME\"])\n",
         "# result = index.query(\n",
@@ -703,8 +765,7 @@
         "# delete_items(delete_ids_list=delete_ids)"
       ],
       "metadata": {
-        "id": "TAMl3xS-D5-I",
-        "cellView": "form"
+        "id": "TAMl3xS-D5-I"
       },
       "execution_count": null,
       "outputs": []
