extension_dictを修正してエクセルなど使えるようにした

--- a/manage_pinecone_index.ipynb
+++ b/manage_pinecone_index.ipynb
@@ -299,8 +299,8 @@
         "    '.pdf': 'pdf',\n",
         "    '.md': 'markdown',\n",
         "    '.docx': 'word',\n",
-        "    'xlsx': 'excel',\n",
-        "    'pptx': 'power_point',\n",
+        "    '.xlsx': 'excel',\n",
+        "    '.pptx': 'power_point',\n",
         "\n",
         "}\n",
         "special_dirs_dict = {\n",
@@ -534,7 +534,7 @@
         "id": "PcKn-xiK1sMM",
         "cellView": "form"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -612,7 +612,7 @@
         "id": "AjrSjD6Gc805",
         "cellView": "form"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -765,7 +765,8 @@
         "# delete_items(delete_ids_list=delete_ids)"
       ],
       "metadata": {
-        "id": "TAMl3xS-D5-I"
+        "id": "TAMl3xS-D5-I",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
